syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package shared;
option go_package = "grpc/v1";

enum TaskKind {
  TKSimple = 0;
  TKSwap = 1;
  TKBridge = 2;
}

enum Network {
  ARBITRUM = 0;
  OPTIMISM = 1;
  BinanaceBNB = 2;
  Etherium = 3;
  POLIGON = 4;
  AVALANCHE = 5;
  GOERLIETH = 6;
  ZKSYNCERA = 7;
  ZKSYNCERATESTNET = 8;//deprecated
  ZKSYNCLITE = 9;
  StarkNet = 10;
  Meter = 11;
  Tenet = 12;
  Canto = 13;
  ArbitrumNova = 14;
  PolygonZKEVM = 15;
  Fantom = 16;
  Base = 17;
  opBNB = 18;
  Linea = 19;
  Zora = 20;
  Core = 21;
  Conflux = 22;
  Fuse = 23;
  Loot = 24;
  Klaytn = 25;
}

enum Token {
  USDT = 0;
  ETH = 1;
  USDC = 2;
  STG = 3;
  BNB = 4;
  MATIC = 5;
  AVAX = 6;
  veSTG = 7;
  WETH = 8;
  LUSD = 9;
  LSD = 10;
  MUTE = 11;
  MAV = 12;
  SPACE = 13;
  VC = 14;
  IZI = 15;
  USDCBridged = 16;
  BUSD = 17;
  USDp = 18;
  CORE = 19;
  CFX = 20;
  FUSE = 21;
  AGLD = 22;
  KLAY = 23;
}

enum ProcessStatus {
  StatusReady = 0;
  StatusRunning = 1;
  StatusError = 2;
  StatusDone = 3;
  StatusStop = 4; // delete
  StatusRetry = 5;
}

enum ProfileAccountType {
  AccountDiscord = 0;
  AccountOkex = 1;
  AccountEmail = 2;
}

message AmUni {
  string gwei = 1;
  string eth = 2;
  string usd = 3;
  shared.Network network = 4;
  string wei = 5;
}

enum AmountType {
  All = 0;
  Percent = 1;
  Value = 2;
}

message Amount {
  oneof kind {
    bool send_all = 4;
    float send_percent = 5;
    float send_amount = 6;//deprecated
    string send_value = 10;
    PercentRange perc_range = 11;
  }
  optional shared.AmUni send = 7;
  optional shared.AmUni balance = 8;
  optional shared.AmUni gas_estimated = 9;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "kind"
      ]
    }
  };
}

message PercentRange {
  int64 min = 1;
  int64 max = 2;
}